# lab5_PO_Jessica

./: CMakeLists.txt  FabrykaSygnalu.cpp  FabrykaSygnalu.h  InterfejsUzytkownika.cpp  InterfejsUzytkownika.h  Komponent.h  KompozytRownolegl.cpp  KompozytRownolegl.h  KompozytSzeregowy.cpp  KompozytSzeregowy.h  KonkretnyKomponent.h  KrokPetliSprzezeniaZwrotnego.cpp  KrokPetliSprzezeniaZwrotnego.h  ModelARX.cpp  ModelARX.h  ObiektSISO.h  OgranicznikAmplitudy.cpp  OgranicznikAmplitudy.h  ProstokatGenerator.cpp  ProstokatGenerator.h  README.md  RegulatorPID.cpp  RegulatorPID.h  SinusGenerator.cpp  SinusGenerator.h  SygnalDekorator.cpp  SygnalDekorator.h  SygnalGenerator.h  SzumBialyGenerator.cpp  SzumBialyGenerator.h  TrojkatGenerator.cpp  TrojkatGenerator.h  WartoscStalaGenerator.cpp  WartoscStalaGenerator.h  lab1.cpp  lab2.cpp  main_interfejs.cpp  test_kompozyt.cpp
